Do not set fixed body scrollbar for "New UI"
In the new UI, we have scrollable panels instead of a scrollable body.

--- a/app/assets/stylesheets/framework/application-chrome.scss
+++ b/app/assets/stylesheets/framework/application-chrome.scss
@@ -64,6 +64,8 @@
 
     .super-sidebar.super-sidebar-loading {
       position: relative;
+      left: 0;
+      top: 0;
 
       &:not(.super-sidebar-is-icon-only) {
         width: calc(#{$super-sidebar-width} - 8px);
@@ -237,11 +239,11 @@
       .dropdown-menu {
         background: var(--gl-background-color-overlap);
       }
-      
+
       .container-fluid {
         @apply gl-px-4 gl-pb-3;
       }
-      
+
       // Hide alert wrapper if it's empty
       > .alert-wrapper:not(:has(*)),
       > .alert-wrapper:not(:has(.container-fluid *)) {
